docs: add docstrings to all functions

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # Created by .ignore support plugin (hsz.mobi)
 ### Python template
+old_main.py
+chromedriver
+leagues.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
