--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,23 @@
+appdirs==1.4.4
 beautifulsoup4==4.9.3
+bs4==0.0.1
+certifi==2020.11.8
+chardet==3.0.4
+cssselect==1.1.0
+fake-useragent==0.1.11
+idna==2.10
+lxml==4.6.1
+parse==1.18.0
+pyee==7.0.4
+PyMySQL==0.10.1
+pyppeteer==0.2.2
+pyquery==1.4.3
+requests==2.25.0
 selenium==3.141.0
+six==1.15.0
 soupsieve==2.0.1
+SQLAlchemy==1.3.20
+tqdm==4.53.0
 urllib3==1.25.11
-
-SQLAlchemy~=1.3.20
+w3lib==1.22.0
+websockets==8.1
